added new rates

--- a/locales/fr/common.json
+++ b/locales/fr/common.json
@@ -137,12 +137,11 @@
         "months4": "28 Mars au 04 Avril 2026"
       },
       "season_end": {
-        "season_title": "Vacances de Pâques 2025",
-        "months": "05 Avril au 12 Avril 2025",
-        "months2": "12 Avril au 19 Avril 2025",
-        "months3": "19 Avril au 26 Avril 2025",
-        "months4": "26 Avril au 03 Mai 2025",
-        "months5": "03 Mai au 10 Mai 2025"
+        "season_title": "Vacances de Pâques 2026",
+        "months": "04 Avril au 11 Avril 2026",
+        "months2": "11 Avril au 18 Avril 2026",
+        "months3": "18 Avril au 25 Avril 2026",
+        "months4": "25 Avril au 02 Mai 2026"
       }
     }
   },
